tests/js/valid/tags/parses/spaces-2.buri
hello = #hello(--comment
1
--comment
,
--comment
""
--comment
)