tests/js/invalid/tag/mismatched-types-3.buri
items: #wrapper(Int, Int) = #wrapper(1)